fix to body
had overflow not showing scroll bar

--- a/css/main.css
+++ b/css/main.css
@@ -23,10 +23,9 @@ body:not(.loaded) #sliderShow img {
   display:none;
 }
 body {
+overflow-x:hidden;
 width:100%;
 height: 100%;
-overflow-x:hidden;
-overflow:hidden;
 background-attachment: cover;
 -webkit-background-size: cover;
 -moz-background-size: cover;
@@ -48,7 +47,6 @@ background-image: url(../img/work/3.JPG), url(../img/work/3.JPG);
 width:100%;
 height: 100%;
 overflow-x:hidden;
-overflow:hidden;
 background-attachment: cover;
 -webkit-background-size: cover;
 -moz-background-size: cover;
@@ -94,7 +92,6 @@ background-image: url(../img/work/3.JPG), url(../img/work/3.JPG);
   margin-left:  20px;
   max-width: 100%;
   max-height: 100%;
-  height: 84.6px;
   right:0;
   left:0;
   padding-right: 1px;
